--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,16 +1,7 @@
 {
-  "helloWorld": "Hello World",
-  "buyNow": "Buy now",
-  "itemCount_one": "({{count}} item)",
-  "itemCount_other": "({{count}} items)",
-  "totalMrp": "Total MRP: <typography>${{mrp}}</typography>",
-  "totalDiscounts": "Total discounts: <span>${{discounts}} ({{discountPercentage}}%)</span>",
-  "offerPrice": "Total offer price: <span>${{offerPrice}}</span>",
   "title": "Smile Cart",
   "pageTitle": "{{title}} | Smile Cart",
-  "cart": {
-    "title": "My cart"
-  },
+  "product": "Product",
   "checkout": "Checkout",
   "contact": "Contact",
   "email": "Email",
@@ -32,10 +23,55 @@
   "selectState": "Select the state",
   "zipCode": "Zip code",
   "enterZipCode": "Enter zip code",
-  "confirmOrder": "Confirm order",
+  "saveInformationForNextTime": "Save this information for next time",
+  "addToCart": "Add to cart",
+  "buyNow": "Buy now",
+  "confirmOrder": "Confirm Order",
+  "searchProducts": "Search Products",
+  "noData": "No products to show",
+  "mrp": "MRP: ${{mrp}}",
+  "offerPrice": "Offer price: ${{offerPrice}}",
+  "discountRate": "{{discountPercentage}}% off",
+  "reachedMaximumUnits": "Reached maximum units",
+  "itemCount_one": "({{count}} item)",
+  "itemCount_other": "({{count}} items)",
+  "totalMrp": "Total MRP: <typography>${{mrp}}</typography>",
+  "totalDiscounts": "Total discounts: <span>${{discounts}} ({{discountPercentage}}%)</span>",
+  "totalOfferPrice": "Total offer price: <span>${{offerPrice}}</span>",
+  "subtotal": "Subtotal <span>${{totalPrice}}</span>",
+  "totalPayablePrice": "Total Payable <span>${{totalPrice}}</span>",
+  "deliveryCharges": "Delivery charges <span>FREE</span>",
+  "cart": {
+    "title": "My cart",
+    "empty": "Your cart is empty!"
+  },
+  "pageNotFound": {
+    "title": "The page you're looking for can't be found",
+    "label": "Back to home"
+  },
+  "removeItemConfirmation": {
+    "title": "Remove item?",
+    "message": "You are removing <strong>{{name}}</strong> from cart. Do you want to continue?",
+    "button": "Yes, remove"
+  },
+  "validations": {
+    "emailRequired": "Email address is required",
+    "firstNameRequired": "First name is required",
+    "lastNameRequired": "Last name is required",
+    "addressRequired": "Address is required",
+    "apartmentRequired": "Apartment is required",
+    "cityRequired": "City is required",
+    "stateRequired": "State is required",
+    "zipCodeRequired": "Zip code is required",
+    "emailInvalid": "Email address is invalid"
+  },
   "error": {
+    "genericError": "An error occurred: {{error}}",
     "noInternetConnection": "No Internet Connection",
-    "networkError": "Network Error"
+    "networkError": "Network Error",
+    "quantityLimit_one": "Only 1 unit is available",
+    "quantityLimit_other": "Only {{count}} units are available",
+    "removedFromCart": "{{name}} is no longer available and has been removed from cart"
   },
   "order": {
     "successfullyPlaced": "Order has been successfully placed"
